Adding swagger page, SSE to yaml, and error 500 tests
