# services/http.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	"github.com/go-faster/jx"
 	"github.com/google/uuid"
 	"io"
 	"log/slog"
@@ -16,7 +17,8 @@ import (
 	openapi "yodleeops/openapi/sources"
 )
 
-const BaseURL = "/yodlee-ops/api/v1"
+const ApiUrl = "/yodlee-ops/api/v1"
+const FrontendDistDir = "./frontend/dist"
 
 func RootMiddleware(allowedOrigins string, next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
@@ -47,74 +49,68 @@ func MakeRoot(app *App, allowOrigins string) http.Handler {
 		panic(fmt.Sprintf("failed to make root: %v", err))
 	}
 
-	mux.Handle(BaseURL+"/taillog", RootMiddleware(allowOrigins, http.HandlerFunc(app.HandleSSELogs)))
-	// a trailing slash is needed for prefix matching. strip prefix allows ogen to do exact path matching
-	mux.Handle(BaseURL+"/", http.StripPrefix(BaseURL, RootMiddleware(allowOrigins, oGenServer)))
+	// ogen generated api: a trailing slash is needed for prefix matching. strip prefix allows ogen to do exact path matching.
+	mux.Handle(ApiUrl+"/", http.StripPrefix(ApiUrl, RootMiddleware(allowOrigins, oGenServer)))
 
-	distDir := "./frontend/dist"
-	fs := http.FileServer(http.Dir(distDir))
+	// streaming api: cannot be generated by ogen
+	mux.Handle(ApiUrl+"/events/taillog", RootMiddleware(allowOrigins, http.HandlerFunc(app.StreamFiObjectLogs)))
+
+	// dedicated swagger-ui page: served from the openapi static directory.
+	mux.Handle("/swagger-ui", http.StripPrefix("/swagger-ui", http.FileServer(http.Dir("./openapi/static"))))
+
+	// react ui page: served from the frontend dist directory.
+	fs := http.FileServer(http.Dir(FrontendDistDir))
 	mux.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
-		// allows defaulting to index page if the file requested does not exist.
-		path := filepath.Join(distDir, r.URL.Path)
-		if info, err := os.Stat(path); err == nil && !info.IsDir() {
+		info, err := os.Stat(filepath.Join(FrontendDistDir, r.URL.Path))
+		fileExists := err == nil && !info.IsDir()
+		if fileExists {
 			fs.ServeHTTP(w, r)
-			return
+		} else {
+			// allows defaulting to index page if the file requested does not exist.
+			http.ServeFile(w, r, filepath.Join(FrontendDistDir, "index.html"))
 		}
-		http.ServeFile(w, r, filepath.Join(distDir, "index.html"))
 	})
 
 	return mux
 }
 
-func stripQuery(elements []string) []string {
-	for i, element := range elements {
-		if element == "" {
-			elements = append(elements[:i], elements[i+1:]...)
-		}
-	}
-	return elements
-}
-
-const (
-	ConnectionsInput  = "connections"
-	AccountsInput     = "accounts"
-	TransactionsInput = "transactions"
-	HoldingsInput     = "holdings"
-)
-
 func FFormatEvent(w io.Writer, topic string, msg string) {
 	fmt.Fprintf(w, "event: %s\ndata: %s\n\n", topic, msg)
 }
 
-func MakeTopicSubscription(topicsInput []string) []string {
-	var topics []string
-	for _, topicInput := range topicsInput {
-		switch strings.ToLower(topicInput) {
-		case ConnectionsInput:
+func (app *App) StreamFiObjectLogs(w http.ResponseWriter, r *http.Request) {
+	filterQuery := func(elements []string) []string {
+		for i, element := range elements {
+			if element == "" {
+				elements = append(elements[:i], elements[i+1:]...)
+			}
+		}
+		return elements
+	}
+
+	values := r.URL.Query()
+	profileIDs := filterQuery(strings.Split(values.Get("profileIDs"), ","))
+	subjects := filterQuery(strings.Split(values.Get("subjects"), ","))
+
+	var topics []infra.Topic
+	for _, subject := range subjects {
+		switch openapi.FiSubject(subject) {
+		case openapi.FiSubjectConnections:
 			topics = append(topics, infra.CnctRefreshTopic, infra.CnctResponseTopic)
-		case AccountsInput:
+		case openapi.FiSubjectAccounts:
 			topics = append(topics, infra.AcctRefreshTopic, infra.AcctResponseTopic)
-		case TransactionsInput:
+		case openapi.FiSubjectTransactions:
 			topics = append(topics, infra.TxnRefreshTopic, infra.TxnResponseTopic)
-		case HoldingsInput:
+		case openapi.FiSubjectHoldings:
 			topics = append(topics, infra.HoldRefreshTopic, infra.HoldResponseTopic)
 		}
 	}
-	return topics
-}
-
-func (app *App) HandleSSELogs(w http.ResponseWriter, r *http.Request) {
-	values := r.URL.Query()
-	profileIDs := stripQuery(strings.Split(values.Get("profileIDs"), ","))
-	topicsInput := stripQuery(strings.Split(values.Get("topics"), ","))
-
-	topics := MakeTopicSubscription(topicsInput)
 
 	w.Header().Set("Content-Type", "text/event-stream")
 	w.Header().Set("Cache-Control", "no-cache")
 	w.Header().Set("Connection", "keep-alive")
 
-	slog.InfoContext(r.Context(), "begin log tail streaming", "topicsInput", topicsInput, "topics", topics, "profileIDs", profileIDs)
+	slog.InfoContext(r.Context(), "begin log tail streaming", "subjects", subjects, "topics", topics, "profileIDs", profileIDs)
 
 	f, ok := w.(http.Flusher)
 	if !ok {
@@ -147,8 +143,8 @@ func (app *App) HandleSSELogs(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func BucketFromSubject(buckets infra.S3Buckets, subject openapi.FiSubject) string {
-	var bucket string
+func BucketFromSubject(buckets infra.S3Buckets, subject openapi.FiSubject) infra.Bucket {
+	var bucket infra.Bucket
 	switch subject {
 	case openapi.FiSubjectConnections:
 		bucket = buckets.CnctBucket
@@ -168,29 +164,27 @@ type FiObjectHandler struct {
 	*App
 }
 
-func (h *FiObjectHandler) NewError(ctx context.Context, err error) *openapi.ErrorRespStatusCode {
-	slog.ErrorContext(ctx, "error handling request", "err", err)
-
-	return &openapi.ErrorRespStatusCode{
-		StatusCode: http.StatusInternalServerError,
-		Response: openapi.ErrorResp{
-			ErrorCode: openapi.ErrorCodeFATALERROR,
-			ErrorDesc: "internal server error",
-		},
-	}
-}
-
 var _ openapi.Handler = (*FiObjectHandler)(nil)
+
+const InternalServerErrorMessage = "internal server error"
 
 func (h *FiObjectHandler) GetFiMetadata(ctx context.Context, params openapi.GetFiMetadataParams) (openapi.GetFiMetadataRes, error) {
 	appCtx := AppContext{Context: ctx, App: h.App}
+
+	internalServerError := func(err error) *openapi.GetFiMetadataInternalServerError {
+		slog.ErrorContext(ctx, "failed to list fi metadata", "err", err)
+		return &openapi.GetFiMetadataInternalServerError{
+			ErrorCode: openapi.ErrorCodeFATALERROR,
+			ErrorDesc: InternalServerErrorMessage,
+		}
+	}
 
 	profileIDsInput := strings.Split(params.ProfileIDs, ",")
 	cursorsInput := strings.Split(params.Cursors, ",")
 	bucketInput := BucketFromSubject(h.S3Buckets, params.Subject.Value)
 
 	if len(profileIDsInput) != len(cursorsInput) {
-		return &openapi.ErrorResp{
+		return &openapi.GetFiMetadataBadRequest{
 			ErrorCode: openapi.ErrorCodePROFILEIDCURSORLENGTH,
 			ErrorDesc: "profileIDs and cursors must be the same length",
 		}, nil
@@ -202,7 +196,7 @@ func (h *FiObjectHandler) GetFiMetadata(ctx context.Context, params openapi.GetF
 
 	fiMetadataResults, err := ListFiMetadataByProfileIDs(appCtx, bucketInput, pairs)
 	if err != nil {
-		return nil, fmt.Errorf("list objects by profile IDs: %w", err)
+		return internalServerError(err), nil
 	}
 
 	opsFiMetadata := make([]openapi.OpsFiMetadata, 0)
@@ -220,24 +214,37 @@ func (h *FiObjectHandler) GetFiMetadata(ctx context.Context, params openapi.GetF
 func (h *FiObjectHandler) GetFiObject(ctx context.Context, params openapi.GetFiObjectParams) (openapi.GetFiObjectRes, error) {
 	appCtx := AppContext{Context: ctx, App: h.App}
 
+	internalServerError := func(err error) *openapi.GetFiObjectInternalServerError {
+		slog.ErrorContext(ctx, "failed to get fi object", "err", err)
+		return &openapi.GetFiObjectInternalServerError{
+			ErrorCode: openapi.ErrorCodeFATALERROR,
+			ErrorDesc: InternalServerErrorMessage,
+		}
+	}
+
 	keyInput := params.Key
 	bucketInput := BucketFromSubject(h.S3Buckets, params.Subject.Value)
 
 	opsFiObject, err := GetFiObject(appCtx, bucketInput, keyInput)
 	if errors.Is(err, ErrKeyNotFound) {
-		return &openapi.ErrorResp{
+		return &openapi.GetFiObjectNotFound{
 			ErrorCode: openapi.ErrorCodeKEYNOTFOUND,
 			ErrorDesc: err.Error(),
 		}, nil
 	} else if err != nil {
-		return nil, fmt.Errorf("retrieve fi object: %w", err)
+		return internalServerError(err), nil
 	}
 	slog.InfoContext(appCtx, "retrieved fi message object", "key", keyInput, "bucket", bucketInput)
 
-	return &openapi.GetFiObjectOK{
+	fiObjectData := make(map[string]jx.Raw)
+	for k, v := range opsFiObject.Data {
+		fiObjectData[k] = jx.Raw(v)
+	}
+
+	return &openapi.FiObject{
 		ProfileId:   opsFiObject.ProfileId,
 		Timestamp:   opsFiObject.Timestamp,
-		OriginTopic: opsFiObject.OriginTopic,
-		Data:        opsFiObject.Data,
+		OriginTopic: string(opsFiObject.OriginTopic),
+		Data:        fiObjectData,
 	}, nil
 }
